--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0",
         "pestphp/pest": "2.x",
+        "pestphp/pest-plugin-faker": "2.x",
+        "pestphp/pest-plugin-laravel": "2.x",
         "phpunit/phpunit": "^10.0",
         "spatie/laravel-ignition": "^2.0"
     },
@@ -49,7 +51,7 @@
             "@php artisan key:generate --ansi"
         ],
         "phpstan": [
-            "@php ./vendor/bin/phpstan analyse"
+            "@php ./vendor/bin/phpstan analyse --xdebug"
         ]
     },
     "extra": {
